--- a/MySql/MySql.csproj
+++ b/MySql/MySql.csproj
@@ -6,6 +6,24 @@
         <RootNamespace>LightestNight.System.EventSourcing.Checkpoints.MySql</RootNamespace>
         <LangVersion>default</LangVersion>
         <Nullable>enable</Nullable>
+        <IsPackable>true</IsPackable>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <PackageId>LightestNight.System.EventSourcing.Checkpoints.MySql</PackageId>
+        <Authors>James Woodley</Authors>
+        <Company>LightestNight Ltd</Company>
+        <Title>LightestNight :: System :: Event Sourcing :: Checkpoints :: MySql</Title>
+        <Description>The elements required to manage a Stream checkpoint inside a MySql data store</Description>
+        <PackageTags>lightestnight;system;infrastructure;event;event sourcing;domain driven design;cqrs;checkpoints;mysql</PackageTags>
+        <Version>1.0.0</Version>
+        <PackageVersion>1.0.0</PackageVersion>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
+        <FileVersion>1.0.0</FileVersion>
+        <InformationalVersion>1.0.0</InformationalVersion>
+        <PackageIcon>icon.jpeg</PackageIcon>
+        <RepositoryUrl>https://github.com/lightestnight/system.eventsourcing.checkpoints.mysql</RepositoryUrl>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
@@ -31,6 +49,20 @@
       <PackageReference Include="LightestNight.System.Data.MySql" Version="1.0.0" />
       <PackageReference Include="LightestNight.System.EventSourcing" Version="3.4.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.7" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\icon.jpeg">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
     </ItemGroup>
 
 </Project>
