--- a/MySql/MySql.csproj
+++ b/MySql/MySql.csproj
@@ -46,7 +46,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <PackageReference Include="LightestNight.System.Data.MySql" Version="1.3.0" />
+      <PackageReference Include="LightestNight.System.Data.MySql" Version="1.4.0-alpha0003" />
       <PackageReference Include="LightestNight.System.EventSourcing" Version="3.5.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
     </ItemGroup>
