--- a/MySql/MySql.csproj
+++ b/MySql/MySql.csproj
@@ -46,9 +46,9 @@
     </ItemGroup>
     
     <ItemGroup>
-      <PackageReference Include="LightestNight.System.Data.MySql" Version="1.4.0-alpha0004" />
+      <PackageReference Include="LightestNight.System.Data.MySql" Version="2.0.0" />
       <PackageReference Include="LightestNight.System.EventSourcing" Version="3.5.0" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.9" />
     </ItemGroup>
 
     <ItemGroup>
